# torc-books-extraction-pipeline

./: .gitignore  .repomixignore  Dockerfile  GUIDELINES.md  README.md  THOUGHTS.md  docker-compose.yml  pyproject.toml  repomix.config.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
source/: app.py
source/api/: routes_extraction.py
source/core/: celery_app.py
source/features/extraction/: extractor.py  schemas.py  service.py  tasks.py
